clang/test/BSC/Negative/Trait/r1/definition_17/definition_17.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait F {
  int foo(This* this);
};

trait F* get() {
  int a = 1;
  return &a; // expected-error {{expected a pointer type which has implemented 'trait F', found 'int'}}
};

int main() {
  trait F* f = get();
  return 0;
}
